# gpsd-threaded

./: README.md  requirements.txt  setup.cfg
src/gpsdthreaded/: __init__.py  __main__.py  gpsresponse.py  heading.py  threadedclient.py
