[metadata]
name = gpsdthreaded
version = 0.1.0
author = Glen Cornell
author_email = glen.m.cornell@gmail.com
description = TPV, SKY and ATT data from GPSD.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glencornell/gpsd-threaded
project_urls =
    Docs = https://github.com/glencornell/gpsd-threaded
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    gpsdclient==1.2.1

[options.packages.find]
where = src
